--- a/src/index.html
+++ b/src/index.html
@@ -5,29 +5,38 @@
     <title>Pokeverse</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="./style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pixelify+Sans:wght@400..700&family=VT323&display=swap" rel="stylesheet">
     <link rel="icon" href="/favicon.png" type="image/png">
   </head>
-  <body>
+  <body class="relative">
     
-    <header>
-      <h1 class="title">POKEVERSE</h1>
+    <header class="flex w-full fixed top-0 z-50 bg-white">
+      <nav class="flex justify-between w-full">
+        <div class="">
+        <h1 class="title">POKEVERSE</h1>
+      </div>
+      <div class="flex items-center gap-5">
+        <p>Inicio</p>
+        <p>API</p>
+        <img src="https://cdn-icons-png.flaticon.com/512/1077/1077086.png" class="size-8" alt="">
+      </div>
+      </nav>
     </header>
 
-    <div id="cards-container"></div>
+    <section class="flex justify-center w-full min-h-screen h-max items-center z-10 bg-black">
+      <div class="flex justify-center items-center h-full">
+        <div class="loader"></div>
+        <div class="cards-container mt-20"></div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
       type="module"
     ></script>
-    <script src="index.js" type="module"></script>
-    <div id="pagination__container">
-        <button id="after">&#10095;</button>
-    </div>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
